# rally-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.bat  install.ps1  install.sh  pyproject.toml  rally.py  requirements.txt  setup.py
agents/: __init__.py  coder.py  orchestrator.py  swarm.py
cli/: __init__.py  banner.py  commands.py  repl.py  theme.py
core/: __init__.py  automation.py  computer_use.py  config.py  engine.py  intelligence.py  knowledge_graph.py  multiuser.py  observability.py  onboarding.py  plugins.py  providers.py  self_improve.py  system_control.py  user_model.py  version.py  workflow_engine.py
docs/: index.html
integrations/: __init__.py  channels.py
marketplace/: __init__.py
memory/: __init__.py  rag.py  store.py
security/: __init__.py  manager.py
tests/: __init__.py  conftest.py  test_config_security_tools.py  test_core.py  test_providers.py
tools/: __init__.py  browser.py  computer_use.py  exec_sandbox.py  registry.py  skills.py  system_control.py  web_search.py
utils/: __init__.py
voice/: __init__.py  stt.py  tts.py  wakeword.py
web/: __init__.py  server.py
