[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rally-agent"
version = "1.0.0"
description = "The OpenClaw Killer — Your AI. Your Rules. Your Data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rally Labs"},
]
keywords = ["ai", "agent", "cli", "llm", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
all = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.0",
    "psutil>=5.9.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
]

[project.scripts]
rally = "rally:main"

[project.urls]
Homepage = "https://github.com/rally-agent/rally-agent"
Documentation = "https://docs.rally-agent.dev"
Repository = "https://github.com/rally-agent/rally-agent"
Issues = "https://github.com/rally-agent/rally-agent/issues"
