[build-system]
requires = ["setuptools>=68.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rally-agent"
version = "1.0.0"
description = "The OpenClaw Killer — Your AI. Your Rules. Your Data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rally Labs"},
]
keywords = ["ai", "agent", "cli", "llm", "openclaw", "chat", "voice", "browser", "rag", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies — installed with pip install rally-agent
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "pyyaml>=6.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "cryptography>=42.0.0",
]

# Optional dependency groups
[project.optional-dependencies]
browser = [
    "playwright>=1.42.0",
    "beautifulsoup4>=4.12.3",
]
voice = [
    "edge-tts>=6.1.9",
]
voice-full = [
    "edge-tts>=6.1.9",
    "openai-whisper>=20231117",
    "TTS>=0.22.0",
    "openwakeword>=0.6.0",
]
rag = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.5.1",
]
docs = [
    "beautifulsoup4>=4.12.3",
    "markdown>=3.5.2",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
]
data = [
    "numpy>=1.26.4",
    "pandas>=2.2.0",
]
db = [
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
]
image = [
    "Pillow>=10.2.0",
    "reportlab>=4.1.0",
]
finetune = [
    "datasets>=2.18.0",
    "transformers>=4.38.2",
    "torch>=2.2.0",
    "peft>=0.10.0",
    "trl>=0.8.1",
    "bitsandbytes>=0.43.0",
]
all = [
    "playwright>=1.42.0",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.5.2",
    "edge-tts>=6.1.9",
    "numpy>=1.26.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
rally = "rally:main"

[project.urls]
Homepage = "https://github.com/Atum246/rally-agent"
Documentation = "https://github.com/Atum246/rally-agent#readme"
Repository = "https://github.com/Atum246/rally-agent"
Issues = "https://github.com/Atum246/rally-agent/issues"

# ── Setuptools configuration ─────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["core*", "cli*", "memory*", "tools*", "agents*", "integrations*",
           "marketplace*", "security*", "utils*", "web*", "voice*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

# ── Ruff linter ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# ── Black formatter ──────────────────────────────────────────────────────────
[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 120

# ── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 120

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
